--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@vercel/analytics": "^1.3.1",
     "framer-motion": "^11.5.4",
-    "next": "14.2.5",
+    "next": "^15.0.2",
     "react": "^18",
     "react-dom": "^18"
   },
